# djSonic

./: .DockerIgnore  .gitignore  Cargo.toml  Dockerfile  api_to_implement.md  docker-compose.dev.yml  example.env
src/: main.rs
src/api/: mod.rs  subsonic_client.rs  traits.rs
src/data_structure/: album.rs  artist.rs  bookmark.rs  chat_message.rs  child.rs  directory.rs  genre.rs  internet_radio.rs  jukebox.rs  misc.rs  mod.rs  music_folder.rs  playlist.rs  podcast.rs  response.rs  search.rs  share.rs  starred.rs  user.rs  video.rs
src/discord/: commands.rs  embed.rs  mod.rs  track_events.rs
