[package]
name = "djSonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
quick-xml = {version="0.22.0",features=["serialize"]}
# poise ="0.0.0" - TODO: wait until it's released!
reqwest = "0.11.7"
tokio = {version="1.15.0",features=["full"]}
md5 = "0.7.0"
rand = "0.8.4"
serde = {version="1.0.132",features = ["derive"]}
dotenv = "0.15.0"